# basedly

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
mcp/: package-lock.json  package.json
mcp/src/: index.ts
src/: App.tsx  ipc.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.gemini/: settings.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs  mcp.rs
src/components/: AddWorkspaceModal.tsx  DataGrid.tsx  InsertRowModal.tsx  KanbanBoard.tsx  McpPanel.tsx  McpToast.tsx  SidePeek.tsx  Sidebar.tsx  SqlConsole.tsx  StatusBar.tsx  TableView.tsx  TitleBar.tsx
