[package]
name = "basedly"
version = "0.1.0"
description = "The No-Nonsense, Local-First Database Workspace"
authors = ["Hoteira"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "basedly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "sqlite",
  "json",
  "chrono",
  "uuid",
] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
